--- a/src/app/pages/verfiy-reset-password-otp/verfiy-reset-password-otp.page.html
+++ b/src/app/pages/verfiy-reset-password-otp/verfiy-reset-password-otp.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button   [routerLink]="['/']" ></ion-back-button>
     </ion-buttons>
-    <ion-title>Verfiying OTP</ion-title>
+    <ion-title>Verfiying OTP reset password</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
