--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,9 +7,18 @@
   <ion-content class="ion-padding">This is the menu content.</ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
+
   <ion-header>
     <ion-toolbar>
-      <ion-title>{{titleHomePage}}</ion-title>
+      <ion-title>{{titleHomePage}}</ion-title> 
+      <ion-select  slot="start"  aria-label="language" 
+          interface="popover" (ionChange)="onLanguageChange($event)" value="ar">
+
+          @for (lang of appLanguages;track lang.name){
+          <ion-select-option [value]="lang?.key">  {{lang.transKey | translate}} </ion-select-option>
+          }
+
+      </ion-select>
       <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
