--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -3,11 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button  [routerLink]="['/']" ></ion-back-button>
     </ion-buttons>
-    <ion-title>Register</ion-title>
+    <ion-title>product</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <form id="registerFormId" class="center-content" #registerForm="ngForm" (ngSubmit)="onSubmit()" >
+  <form id="productFormId" class="center-content" #productForm="ngForm" (ngSubmit)="onSubmit()" >
 <!--
     @if( this.error ){
       <ng-container [ngTemplateOutlet]="errorTemplate"></ng-container>
