--- a/src/app/pages/verfiy-reset-password-otp/verfiy-reset-password-otp.page.html
+++ b/src/app/pages/verfiy-reset-password-otp/verfiy-reset-password-otp.page.html
@@ -6,38 +6,42 @@
     <ion-title>Verfiying OTP reset password</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  <form id="otpFormId" class="margin-content" #otpForm="ngForm" (ngSubmit)="verfiyOtp()">
+<ion-content [fullscreen]="true">
+  <div class="verfiy-reset-content">
+      <form id="otpFormId" class="verfiy-reset-form" #otpForm="ngForm" (ngSubmit)="verfiyOtp()">
+    <!--
+      @if( this.error ){
+        <ng-container [ngTemplateOutlet]="errorTemplate"></ng-container>
+      }
+      <ng-template #errorTemplate>
+        <ion-text>{{ error }}</ion-text>
+      </ng-template>
+    -->
+        <ion-row class="margin-top-item">
+          
+          <ion-col>
+              <ion-input
+                label-placement="floating" 
+                placeholder="{{'otp.enterotpnumber' | translate}}"
+                label="{{'otp.otpnumber' | translate}}"
+                counter="true"
+                maxlength="6"
+                minlength="6"
+                required
+                color="secondary"
+              ></ion-input>
+          </ion-col>  
 
-   @if( this.error ){
-    <ng-container [ngTemplateOutlet]="errorTemplate"></ng-container>
-  }
-  <ng-template #errorTemplate>
-    <ion-text>{{ error }}</ion-text>
-  </ng-template>
+        </ion-row>
 
-    <ion-row class="margin-top-item">
+        <ion-row>
+          <ion-col>
+            <ion-button type="submit" [disabled]="!otpForm.valid" color="secondary" expand="block" class="submit-button">
+              {{'otp.verfiy' | translate}}  @if(isLoading) {<ion-spinner class="spinner-button"></ion-spinner>}
+            </ion-button>
+          </ion-col>
+        </ion-row>
       
-      <ion-col>
-          <ion-input
-            label-placement="floating" 
-            placeholder="Enter an OTP number"
-            label="OTP number"
-            counter="true"
-            maxlength="6"
-            minlength="6"
-            required
-            color="secondary"
-          ></ion-input>
-      </ion-col>  
-
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <ion-button type="submit" [disabled]="!otpForm.valid" color="secondary" expand="block">Verify OTP  @if(isLoading) {<ion-spinner></ion-spinner>}</ion-button>
-      </ion-col>
-    </ion-row>
-   
-  </form>
+      </form>
+    </div>  
 </ion-content>
