--- a/src/app/pages/newpassword/newpassword.page.html
+++ b/src/app/pages/newpassword/newpassword.page.html
@@ -4,135 +4,147 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content [fullscreen]="true">
+  <div class="new-password-content"> 
+      <form id="newPasswordFormId" class="new-password-form" #newPasswordForm="ngForm"
+          (ngSubmit)="createNewPassword()" novalidate [appMatchPassword]="['password', 'confirmPassword']">
+    <!--
+        @if( this.error ){
+        <ng-container [ngTemplateOutlet]="errorTemplate"></ng-container>
+        }
+      <ng-template #errorTemplate>
+        <ion-text>{{ error }}</ion-text>
+      </ng-template>
+    -->
+        <ion-row >
+          
+          <ion-col>
+              <ion-input
+                label-placement="floating" 
+                label="{{'newpassword.password' | translate}}"
+                placeholder="{{'newpassword.enterpassword' | translate}}"
+                counter="true"
+                maxlength="20"
+                minlength="6"
+                required
+                [(ngModel)]="passwordForm.password"
+                #password="ngModel"
+                [type]="passwordHide ? 'password' : 'text'"
+                name="password"
+                color="secondary"
+              >
+              @if (password!.value !== '') {
+                <ion-icon slot="end" [name]="passwordHide ? 'eye' : 'eye-off'" (click)="passwordHide = !passwordHide"></ion-icon>
+              }
+              </ion-input>
+              @if (password!.invalid && (password!.touched || password!.dirty)) {
 
-  <form id="newPasswordFormId" class="margin-content" #newPasswordForm="ngForm"
-       (ngSubmit)="createNewPassword()" novalidate [appMatchPassword]="['password', 'confirmPassword']">
-
-    @if( this.error ){
-     <ng-container [ngTemplateOutlet]="errorTemplate"></ng-container>
-   }
-   <ng-template #errorTemplate>
-     <ion-text>{{ error }}</ion-text>
-   </ng-template>
- 
-     <ion-row class="margin-top-item">
-       
-       <ion-col>
-           <ion-input
-             label-placement="floating" 
-             placeholder="Enter New Password"
-             label=" New Password "
-             counter="true"
-             maxlength="20"
-             minlength="6"
-             required
-             [(ngModel)]="passwordForm.password"
-             #password="ngModel"
-             [type]="passwordHide ? 'password' : 'text'"
-             name="password"
-             color="secondary"
-           >
-           @if (password!.value !== '') {
-            <ion-icon slot="end" [name]="passwordHide ? 'eye' : 'eye-off'" (click)="passwordHide = !passwordHide"></ion-icon>
-          }
-          </ion-input>
-       </ion-col>  
- 
-     </ion-row>
-
-     @if (password!.invalid && (password!.touched || password!.dirty)) {
-
-      @if (password!.errors?.['required']) {
-        <ng-container [ngTemplateOutlet]="passwordTemplateRequired"></ng-container>
-      }
-
-      @if (password!.errors?.['minlength']) {
-        <ng-container [ngTemplateOutlet]="passwordTemplateMinlength"></ng-container>
-      }
-
-      @if (password!.errors?.['maxlength']) {
-        <ng-container [ngTemplateOutlet]="passwordTemplateMaxlength"></ng-container>
-      }
+                @if (password!.errors?.['required']) {
+                  <ng-container [ngTemplateOutlet]="passwordTemplateRequired"></ng-container>
+                }
       
-    }
-  
-    <ng-template #passwordTemplateRequired>
-      <ion-text color="danger"><small>Password is required</small> </ion-text>
-    </ng-template>
-
-    <ng-template #passwordTemplateMinlength>
-      <ion-text color="danger"><small>Password minmum 6 characters</small> </ion-text>
-    </ng-template>
-
-    <ng-template #passwordTemplateMaxlength>
-      <ion-text color="danger"><small>Password maxnmum 20 characters</small> </ion-text>
-    </ng-template>
-
-
-
-     <ion-row class="margin-top-item">
-       
-      <ion-col>
-          <ion-input
-            label-placement="floating" 
-            placeholder="Enter confirm password"
-            label=" confirm password "
-            counter="true"
-            maxlength="20"
-            minlength="6"
-            required
-            [(ngModel)]="passwordForm.confirmPassword"
-            #confirmPassword="ngModel"
-            [type]="confirmPasswordHide ? 'password' : 'text'"
-            name="confirmPassword"
-            color="secondary"
-          >
-          @if (confirmPassword!.value !== '') {
-            <ion-icon slot="end" [name]="confirmPasswordHide ? 'eye' : 'eye-off'" (click)="confirmPasswordHide = !confirmPasswordHide"></ion-icon>
-          }
-        </ion-input>
-      </ion-col>  
-
-    </ion-row>
-
-    @if (confirmPassword!.invalid && (confirmPassword!.touched || confirmPassword!.dirty)) {
-      @if (confirmPassword!.errors?.['required']) {
-        <ng-container [ngTemplateOutlet]="confirmPasswordTemplateRequired"></ng-container>
-      }
-      @if (confirmPassword!.errors?.['minlength']) {
-        <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMinlength"></ng-container>
-      }
-      @if (confirmPassword!.errors?.['maxlength']) {
-        <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMaxlength"></ng-container>
-      }
-
-      @if (confirmPassword!.errors?.['matching']) {
-        <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMatching"></ng-container>
-      }
-    }
-  
-    <ng-template #confirmPasswordTemplateRequired>
-      <ion-text color="danger"><small>Confirm password is required</small> </ion-text>
-    </ng-template>
-
-    <ng-template #confirmPasswordTemplateMinlength>
-      <ion-text color="danger"><small>Confirm password minmum 6 characters</small> </ion-text>
-    </ng-template>
-
-    <ng-template #confirmPasswordTemplateMaxlength>
-      <ion-text color="danger"><small>Confirm password maxnmum 20 characters</small> </ion-text>
-    </ng-template>
-
-    <ng-template #confirmPasswordTemplateMatching>
-      <ion-text color="danger"><small>Confirm password doesn't matching ... </small> </ion-text>
-    </ng-template>
- 
-     <ion-row>
-       <ion-col>
-         <ion-button type="submit" [disabled]="!newPasswordForm.valid" color="secondary" expand="block">Change new password  @if(isLoading) {<ion-spinner></ion-spinner>}</ion-button>
-       </ion-col>
-     </ion-row>
+                @if (password!.errors?.['minlength']) {
+                  <ng-container [ngTemplateOutlet]="passwordTemplateMinlength"></ng-container>
+                }
+      
+                @if (password!.errors?.['maxlength']) {
+                  <ng-container [ngTemplateOutlet]="passwordTemplateMaxlength"></ng-container>
+                }
+                
+              }
+            
+              <ng-template #passwordTemplateRequired>
+                <ion-text class="error-text" color="danger"><small>{{'newpassword.required' | translate}}</small> </ion-text>
+              </ng-template>
+      
+              <ng-template #passwordTemplateMinlength>
+                <ion-text class="error-text" color="danger"><small>{{'newpassword.min' | translate}}</small> </ion-text>
+              </ng-template>
+      
+              <ng-template #passwordTemplateMaxlength>
+                <ion-text class="error-text" color="danger"><small>{{'newpassword.max' | translate}}</small> </ion-text>
+              </ng-template>
+          </ion-col>  
     
-   </form>
+        </ion-row>
+
+
+
+
+
+        <ion-row >
+          
+          <ion-col>
+              <ion-input
+                label-placement="floating" 
+                placeholder="{{'newpassword.enterpassword' | translate}}"
+                label="{{'newpassword.retypepassword' | translate}}"
+                counter="true"
+                maxlength="20"
+                minlength="6"
+                required
+                [(ngModel)]="passwordForm.confirmPassword"
+                #confirmPassword="ngModel"
+                [type]="confirmPasswordHide ? 'password' : 'text'"
+                name="confirmPassword"
+                color="secondary"
+              >
+              @if (confirmPassword!.value !== '') {
+                <ion-icon slot="end" [name]="confirmPasswordHide ? 'eye' : 'eye-off'" (click)="confirmPasswordHide = !confirmPasswordHide"></ion-icon>
+              }
+            </ion-input>
+            @if (confirmPassword!.invalid && (confirmPassword!.touched || confirmPassword!.dirty)) {
+              @if (confirmPassword!.errors?.['required']) {
+                <ng-container [ngTemplateOutlet]="confirmPasswordTemplateRequired"></ng-container>
+              }
+              @if (confirmPassword!.errors?.['minlength']) {
+                <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMinlength"></ng-container>
+              }
+              @if (confirmPassword!.errors?.['maxlength']) {
+                <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMaxlength"></ng-container>
+              }
+    
+              @if (confirmPassword!.errors?.['matching']) {
+                <ng-container [ngTemplateOutlet]="confirmPasswordTemplateMatching"></ng-container>
+              }
+            }
+          
+            <ng-template #confirmPasswordTemplateRequired>
+              <ion-text class="error-text" color="danger"><small>{{'newpassword.required' | translate}}</small> </ion-text>
+            </ng-template>
+    
+            <ng-template #confirmPasswordTemplateMinlength>
+              <ion-text class="error-text" color="danger"><small>{{'newpassword.min' | translate}}</small> </ion-text>
+            </ng-template>
+    
+            <ng-template #confirmPasswordTemplateMaxlength>
+              <ion-text class="error-text" color="danger"><small>{{'newpassword.max' | translate}}</small> </ion-text>
+            </ng-template>
+    
+            <ng-template #confirmPasswordTemplateMatching>
+              <ion-text class="error-text" color="danger"><small>{{'newpassword.notmatch' | translate}}</small> </ion-text>
+            </ng-template>
+          </ion-col>  
+
+        </ion-row>
+
+ 
+    
+        <ion-row>
+          <ion-col>
+            <ion-button type="submit" 
+                        [disabled]="!newPasswordForm.valid" 
+                        color="secondary" 
+                        expand="block"
+                        class="submit-button">
+                        {{'newpassword.createnewpassword' | translate}}  
+                        @if(isLoading) {
+                          <ion-spinner class="spinner-button"></ion-spinner>
+                        }
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        
+      </form>
+    </div>     
 </ion-content>
