--- a/src/app/pages/start/start.page.html
+++ b/src/app/pages/start/start.page.html
@@ -1,30 +1,32 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Start Page
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 <ion-content [fullscreen]="true" >
-    <ion-grid >
-      <ion-row>
-        <ion-col align-self-center>
-          <ion-label>{{authURL}}</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col align-self-center>
-          <ion-button [routerLink]="['/register']" expand="block" color="primary">Register</ion-button>
-                <!--<span class="divider line one-line">or</span>-->
-                <ion-item-divider>
-                  <div  style="width: 100%; text-align: center; background-color: transparent;">OR</div>
-                </ion-item-divider>
-          <span class="already">Already a user?</span>
-          <ion-button [routerLink]="['/login']" expand="block" color="danger">Sign In</ion-button>
+    <div class="start-content" >
 
-
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
+      <div class="select-language">
+        <ion-select   aria-label="language" 
+          interface="popover" (ionChange)="onLanguageChange($event)" value="ar">
+          @for (lang of appLanguages;track lang.name){
+              <ion-select-option [value]="lang?.key">  {{ lang.transKey | translate }} </ion-select-option>
+          }
+        </ion-select>
+      </div>  
+      
+      <ion-grid class="start-grid" >
+        <ion-row>
+          <ion-col size="7">
+            <ion-label translate>start.welcome</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col align-self-center>
+            <ion-button [routerLink]="['/account-register']" expand="block" color="primary" translate>start.accountregister</ion-button>
+                  <ion-item-divider>
+                    <div  style="width: 100%; text-align: center; background-color: transparent;" translate>start.or</div>
+                  </ion-item-divider>
+            <span class="already" translate>start.hasaccount</span>
+            <ion-button [routerLink]="['/login']" expand="block" color="danger" translate>start.login</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+  </div>
 </ion-content>
