--- a/src/app/pages/start/start.page.scss
+++ b/src/app/pages/start/start.page.scss
@@ -1,6 +1,20 @@
-.start-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+
+
+
+.start-content {
+    position: relative;
+    margin: 25px 50px;
 }
+
+.select-language{
+    position: absolute;
+    top:10px;
+    left:15px;
+}
+
+.start-grid{
+    position: relative;
+    top:40vh;
+}
+
